<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/item_image"
        android:scaleType="centerCrop"
        android:src="@drawable/img3" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_title2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginTop="13dp"
        />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/christmas_theme_2"
        android:textSize="14sp"
        android:layout_marginTop="13dp"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/linkTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link3"
        android:textColor="@color/blue"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/showButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/generate_link"
        android:onClick="onShowClicked"/>

</LinearLayout>